crates/slpy-eval/tests/snapshots/golden_grids__gradient-motion_80x24_unicode.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: unicode  fg: chroma
+--------------------------------------------------------------------------------+
|·····░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███████████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░·····|
|··░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········|
|░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········   |
|░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········      |
|░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········         |
|▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········            |
|▒▒▒▒▓▓▓▓▓▓▓▓████████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········               |
|▒▓▓▓▓▓▓▓▓▓███████████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········                  |
|▓▓▓▓▓▓▓███████████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░·········                    |
|▓▓▓▓███████████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░·········                    ···|
|▓███████████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░·········                    ······|
|█████████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░·········                    ········░|
|██████████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░·········                    ········░░░░|
|███████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········                    ········░░░░░░░|
|████████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········                    ········░░░░░░░░░▒|
|█████▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········                    ·········░░░░░░░░▒▒▒▒|
|███▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········                    ·········░░░░░░░░▒▒▒▒▒▒▒|
|▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░········                    ·········░░░░░░░░▒▒▒▒▒▒▒▒▓▓|
|▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········                    ·········░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓|
|▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░········                    ·········░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓|
|▒▒▒▒▒▒▒▒░░░░░░░░········                     ········░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓██|
|▒▒▒▒▒░░░░░░░░········                     ········░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓█████|
|▒▒░░░░░░░░········                     ········░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓████████|
|                                                                                |
+--------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 51febf4df69a0ad5
  1 9a42589a4ceb00a1
  2 7b8193451b610b5d
  3 05bfe0c3f035dc95
  4 ed05d4dbd3121505
  5 3959608745b4e0e9
  6 4d14a4365b512f05
  7 39ad7b43f811ee9d
  8 2959c6c4cfe8e62d
  9 353300d203a4b659
 10 d249fae1fb980c15
 11 0ef5e2948b941b09
 12 70606656a6aad689
 13 b75b5c1506ca94a5
 14 1b2681a7e9f1845d
 15 c7ad5aeea6d316c1
 16 a5b69125fa7252a5
 17 f637b6d05e906c6d
 18 0a747abacf0b18c5
 19 b61c34af772123f5
 20 4337a7a9535da411
 21 4b81512fdb1c1969
 22 1ce8f3b720b20fe1
 23 223995d44c4552f5
