crates/slpy-eval/tests/snapshots/golden_grids__hard-cut_206x58_ascii-coarse.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
hard-cut frame 40
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: ascii-coarse  fg: chroma
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
|@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%%%%%%%%%%%%%#####################***********************+++++++++++++++++++++======================----------------------::::::::::::::::::::::.....................           |
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 461b542a50840a50
  1 3d25475fb70c0780
  2 3d25475fb70c0780
  3 834c7d23d1ac58ee
  4 a665383b34d13300
  5 6f337cfdca1d8156
  6 1057786bd83c6730
  7 5782699a18a057e0
  8 2274ceabfc00cd10
  9 c09e7c8524b49b72
 10 ad795d2fb6aa0d20
 11 ea2bfd83ea431212
 12 b337cdc6f44f0560
 13 b337cdc6f44f0560
 14 c8ada1e8da9e3670
 15 c8ada1e8da9e3670
 16 03cc6875fe813f50
 17 03cc6875fe813f50
 18 10a4baf011368780
 19 ce93ad5b49035972
 20 1141ffabe9e0e32e
 21 cea34609e0d3a5a2
 22 481e45e64238c216
 23 c2365c50e2f2fa42
 24 e59517d10d2bb660
 25 d0af1026dc6fa332
 26 32519504829f1290
 27 98251363fdb8e692
 28 98251363fdb8e692
 29 9accf0f709c5a842
 30 9accf0f709c5a842
 31 a60ad04bf9d05b70
 32 70d21c57f3b00802
 33 2793339e69b3f550
 34 e25dfa0f73205972
 35 1a9978757c3f0ff6
 36 acd3ae7e9a13b432
 37 ef56185c8d06f1ee
 38 726260c8218292e2
 39 d84eeca924c43570
 40 8f661579647e4a82
 41 8f661579647e4a82
 42 93a055d13842d672
 43 93a055d13842d672
 44 78c7d74408026d12
 45 78c7d74408026d12
 46 89c6d7cfbc63d9e0
 47 33dc97b755981bc2
 48 2444eb4414b55070
 49 a1550f1128fadb42
 50 c2bc5fd468d4361e
 51 17b6409a88c69bb2
 52 03c617115938caf6
 53 1c7c6771251c55e0
 54 dd6c869783d066ae
 55 25df9b58ecc53430
 56 25df9b58ecc53430
 57 4bd8f7c112fecde0
